scores affiches mais pas formates, markers pour la map

--- a/app/src/main/res/layout/activity_scores.xml
+++ b/app/src/main/res/layout/activity_scores.xml
@@ -8,14 +8,15 @@
     tools:context=".ScoresActivity">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="267dp"
-        android:layout_marginTop="134dp"
-        android:layout_marginEnd="267dp"
-        android:layout_marginBottom="134dp"
-        android:text="TODO scores"
+        android:id="@+id/textViewScores"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="49dp"
+        android:layout_marginBottom="8dp"
+        android:text=""
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
