--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,7 +14,7 @@
         android:layout_width="178dp"
         android:layout_height="143dp"
         android:layout_marginStart="245dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="245dp"
         android:contentDescription="player avatar"
         android:scaleType="fitCenter"
@@ -26,33 +26,32 @@
 
     <EditText
         android:id="@+id/editText1"
-        android:layout_width="586dp"
-        android:layout_height="0dp"
+        android:layout_width="455dp"
+        android:layout_height="45dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="11dp"
         android:layout_marginEnd="2dp"
+        android:backgroundTint="@color/black"
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
         android:textAlignment="center"
-        android:backgroundTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.458"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
         android:id="@+id/editText2"
-        android:layout_width="586dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="373dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="372dp"
+        android:layout_width="455dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="65dp"
+        android:layout_marginEnd="6dp"
+        android:backgroundTint="@color/black"
         android:ems="10"
         android:hint="Motto"
         android:inputType="textPersonName"
         android:textAlignment="center"
-        android:backgroundTint="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/saveButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText1" />
 
